2013-05-16: 1.0.0 (3bd6499)
- Initial version

2013-09-19: 1.0.1 (6f9bb24)
- Cleanup and unify the way units are displayed on the LCD

2015-04-21: 1.0.2 (a8fc738)
- Windows installer is signed now
- Add workaround for macOS font problem

2015-07-15: 1.0.3 (13f6f14)
- Add support for Ambient Light Bricklet 2.0

2015-08-07: 1.0.4 (4b760a3)
- Fix formatting of illuminance values from Ambient Light Bricklet 2.0
- Add missing division by 100 for temperature values

2017-11-17: 1.0.5 (90e3666)
- Add support for Humidity Bricklet 2.0

2019-03-18: 1.1.0 (<unknown>)
- Add support for Ambient Light Bricklet 3.0
- Add support for Barometer Bricklet 2.0
- Port to Python 3 and PyQt 5
- Install start menu link for all users on Windows